overflow on phone fix

--- a/src/components/CSS/Timetable.css
+++ b/src/components/CSS/Timetable.css
@@ -80,6 +80,9 @@ visibility: hidden;
     .table{
         width: 90%;
     }
+    .hidden-table{
+        display: none;
+      }
 }
 @media (max-width: 470px) {
     .table{
